// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> _mine 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Memo()
    col={0}
    failedMineKey="0"
    row={0}
    type="mine"
  >
    <styled.div
      data-testid="cell"
      failedMineKey="0"
      onClick={[Function]}
      onMouseDown={[Function]}
      type="mine"
    >
      <div
        className="sc-bdvvtL guyQzE"
        data-testid="cell"
        onClick={[Function]}
        onMouseDown={[Function]}
        type="mine"
      />
    </styled.div>
  </Memo()>
</Provider>
`;

exports[`<Cell /> _render 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Memo()
    col={0}
    failedMineKey="0"
    row={0}
    type="closed"
  >
    <styled.div
      data-testid="cell"
      failedMineKey="0"
      onClick={[Function]}
      onMouseDown={[Function]}
      type="closed"
    >
      <div
        className="sc-bdvvtL htSWkN"
        data-testid="cell"
        onClick={[Function]}
        onMouseDown={[Function]}
        type="closed"
      />
    </styled.div>
  </Memo()>
</Provider>
`;
